2006-09-22  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteSourceFetcher::initialize): Proxy patch fixup to
	escape user/password from Anatol Pomozov.
	(Gem::RemoteSourceFetcher::connect_to): Proxy patch fixup to
	escape user/password from Anatol Pomozov.

	* test/test_remote_fetcher.rb (TestRemoteFetcher::setup): Proxy
	patch fixup to escape user/password from Anatol Pomozov.
	(TestRemoteFetcher::test_no_proxy): Proxy patch fixup to escape
	user/password from Anatol Pomozov.

	* test/io_capture.rb (Gem::IoCapture): Created new IoCapture
	module to handle capturing output of code under test.

	* test/test_installer.rb
	(TestInstaller::test_generate_bin_symlinks_win32): Removed ugly
	$TESTING hack and substituted new io capture module.
	(TestInstaller::test_install_with_message): Removed one-off stdout
	capture and replaced with new IO Capture module.

2006-09-19  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to version
	0.9.0.3.

	* test/test_version_comparison.rb (TestRequirementEquality): Added
	more tests for Dependency equality testing and one additions check
	for requirement vs non-requirement equality.

	* lib/rubygems/version.rb (Gem::Dependency::==) Fixed '=' bug in
	'==' code.

2006-09-18 Chad Fowler <chad@chadfowler.com>
      
        * lib/rubygems/remote_installer.rb
        Only show the last 3 gem versions on a multiplatform remote
        install list.

2006-09-18  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteInstaller::install): Added Hugh Sasse's patch for
	skipping gems on install.

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to 0.9.0.2.

	* lib/rubygems/version.rb (Gem::Dependency::hash): Added hash code
	calculation.
	(Gem::Version::hash): Added hash code calculation.
	(Gem::Requirement::hash): Added hash code calculation.

	* test/test_specification.rb (TestSpecificationEquality): Added